@@ -1,3 +1,8 @@
+2007-09-17  Alexander Larsson  <alexl@redhat.com>
+
+        * daemon/gvfsbackendsftp.c:
+	Update to new GDataInputStream function names 
+
 2007-09-14  Alexander Larsson  <alexl@redhat.com>
 
         * client/gdaemonfileoutputstream.c:
